# covid-register.eu

./: LICENSE  README.rst  manage.py  pyproject.toml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
covidregister/: conftest.py
covidregister/register/: admin.py  custom_layout_object.py  forms.py  models.py  urls.py  views.py
covidregister/register/migrations/: 0001_initial.py  0002_auto_20200523_1254.py  0002_auto_20200524_1608.py  0002_auto_20200525_0633.py  0003_auto_20200525_0654.py  0004_auto_20200525_0757.py  0005_covidillness.py  0006_auto_20200525_0925.py  0007_auto_20200525_1810.py  0008_auto_20200525_1838.py  0009_auto_20200525_1902.py  0010_auto_20200525_1929.py  0011_covidtherapy_patient.py  0012_auto_20200525_1954.py  0013_auto_20200525_2239.py  0014_auto_20200525_2247.py  0015_auto_20200525_2351.py  0016_auto_20200526_0210.py  0017_auto_20200526_0230.py  0018_auto_20200526_0358.py
covidregister/register/templates/: create.html  delete.html  formset.html  list.html
covidregister/static/css/: project.css
covidregister/templates/: base.html
covidregister/templates/account/: login.html
covidregister/templates/pages/: about.html  home.html
covidregister/users/: apps.py  forms.py  models.py  urls.py  views.py
covidregister/users/migrations/: 0001_initial.py  0002_auto_20200525_2021.py  0003_auto_20200525_2028.py
covidregister/users/tests/: test_forms.py  (+3 more)
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  nginx.template.conf  redis-worker-systemd.template.service
staticfiles/css/: project.css
(+3 files in other folders)
